<resources>
    <string name="app_name">Dokkan</string>


    <string name="location_name">cairo, Egypt</string>
    <string name="user_name">Salma Yassin</string>
    <string name="sign_out">Sign Out</string>

    <string name="send">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attachment_jpg">Attachment.jpg</string>
    <string name="message">Message</string>
    <string name="item_link">Item Link</string>
    <string name="name">Name</string>

    <string name="string1">NO notificatios yet</string>
    <string name="string2">Stay tuned! Notifications about your activity</string>
    <string name="string3">will show up here</string>

    <string name="shope_name">Shope Name</string>
    <string name="is_the_price_ok_for_you">Is the price ok for you?</string>
    <string name="_11_04_am">11:04 Am</string>

    <string name="sorry_no_result_found">Sorry,no result found</string>


    <string name="after_registration">AFTER REGISTRATION</string>
    <string name="register">REGISTER</string>
    <string name="register2">Register</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the">i agree to the</string>
    <string name="terms_and_conditions"> terms and conditions.</string>
    <string name="register3">Register</string>
    <string name="terms_and_conditions2">TERMS AND CONDITIONS</string>
    <string name="i_agree_to_the_terms_and_conditions">i agree to the terms and conditions.</string>

    <string name="recently_viewed">Recently Viewed</string>

    <string name="accessories">Accessories</string>
    <string name="based_on_your_recent_searches">Based on your recent searches</string>
    <string name="see_more">See more</string>
    <string name="similar_to_items_you_viewed">Similar to items you Viewed</string>
    <string name="view_more">View more</string>
    <string name="any_other_category">Any Other Category</string>
    <string name="similar_to_recent_favorites">Similar to recent favorites</string>
    <string name="item_full_name">Item Full Name</string>
    <string name="price_150">$150</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="ask_question">Ask Question</string>


    <string name="text1">The cart is empty</string>
    <string name="looks_like_you_haven_t_added_any_items_to_your_cart_yet">Looks like you haven\'t added any items to your cart yet</string>
    <string name="back_to_shopping">Back to Shopping</string>
    <string name="chating">Chating</string>
    <string name="hello">hello</string>
    <string name="type_a_message">type a message..</string>
    <string name="azza_helmy">Azza Helmy</string>
    <string name="shop">Shop</string>
    <string name="item">Item</string>
    <string name="_150">$150</string>
    <string name="shopName">Shop Name</string>

    <string name="made_with_love">Made With Love</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_your_social">Login With Your Social</string>
    <string name="media_account">Media Account.</string>
    <string name="invited_you_to_something">invited you to something</string>


    <string name="name_item">NAME</string>

    <string name="date_item">11:04AM</string>

    <string name="Register_here"> Register here.</string>

    <string name="Dont_have_an_account">Don’t have an account?</string>

    <string name="Forget_Password">Forget Password!?</string>

    <string name="hint_email">E-mail</string>

    <string name="hint_password">password</string>

    <string name="Don_Worry_we_just_need_your"> Do not Worry we just need your </string>
    <string name="registared_email_address_and_its_done"> registared email address and its done!</string>
    <string name="enter_your_registered_email">enter your registered email</string>
    <string name="Regst_Password">Reset Password</string>
    <string name="welcomeUser_name">Asmaa El Qady</string>
    <string name="browse_category">Browse Category</string>
    <string name="product">Product</string>
    <string name="embroidery_art">Embroidery Art</string>


    <string name="Item_name">order_item_name</string>
    <string name="shop_name">Shop Name</string>
    <string name="s1">1</string>
    <string name="splus">+</string>
    <string name="s150">$150</string>
    <string name="my_address_book">My Address Book</string>
    <string name="customer_number">Customer Number</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_name">Customer NAme</string>
    <string name="textplus">+</string>
    <string name="save">Save</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_your_country">Enter Your Country</string>
    <string name="number">Number</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="country">Country</string>
    <string name="order_status">Order Status</string>
    <string name="customer_nname">customer Name</string>
    <string name="title_activity_a">a</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="reviews">Reviews</string>
    <string name="about">About</string>
    <string name="policies">Policies</string>
    <string name="item_name">Item Name</string>
    <string name="facebook">FaceBook</string>
    <string name="instgram">Instgram</string>
    <string name="price_19">19</string>
    <string name="string_numOfLiks">77</string>
    <string name="string_dateOfReview">6 Days ago</string>
    <string name="string_product_name">Weading Candle holder</string>
    <string name="string_text_askQustion">Ask Question</string>
    <string name="string_minus_text">-</string>
    <string name="string_counter_text">1</string>
    <string name="string_plus_text">+</string>
    <string name="string_text_AddToCart">Add To CarT</string>
    <string name="string_location_text">Cairo , Egypt</string>
    <string name="string_text_reviews">(115 Reviews)</string>
    <string name="string_text_Reviews">Reviews</string>
    <string name="string_text_itemDetails">Item Details</string>
    <string name="string_text_Size">Size</string>
    <string name="string_text_size">hight~30cm</string>
    <string name="string_text_material">Materials</string>
    <string name="string_text_detais">coper wire, we use a good material</string>
    <string name="items">Items</string>
    <string name="user_not_found">"User not found, please use a valid email "</string>
</resources>