<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/layout_match_parent"
    android:layout_height="@dimen/layout_match_parent"
    tools:context=".No_Notifications"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="@dimen/layout_dimen_50dp"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/layout_200dp"
        android:layout_height="@dimen/layout_200dp"
        android:layout_gravity="center"
        android:src="@drawable/nonotifications"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_width="@dimen/layout_wrap_content"
        android:layout_height="@dimen/layout_wrap_content"
        android:text= "@string/string1"
        android:textSize="@dimen/textSize_18sp"
        android:textStyle="bold"
        android:textColor="@color/colortextblod"

        />
    <TextView
        android:layout_width="@dimen/layout_300dp"
        android:layout_height="@dimen/layout_wrap_content"
        android:layout_gravity="center"
        android:text="@string/string2"
        android:textSize="@dimen/textSize_14sp"
        android:textColor="@color/colortext"
        />
    <TextView
        android:layout_width="@dimen/layout_wrap_content"
        android:layout_height="@dimen/layout_wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/string3"
        android:textSize="@dimen/textSize_14sp"
        android:textColor="@color/colortext"
        />

</LinearLayout>