<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="@drawable/register_customer"

    android:orientation="vertical"

    tools:context=".view.login.LoginFragment">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_chevron_left_black_24dp"
        android:padding="@dimen/arrow_back_padd"
        />




    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/layout_dimen_40dp"

        android:layout_marginRight="@dimen/layout_dimen_40dp"

        android:layout_marginTop="@dimen/margin_190"

        android:orientation="vertical"

        android:gravity="center"

        >


        <LinearLayout

            android:id="@+id/linear1"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:orientation="vertical">


            <EditText
                android:id="@+id/email_login"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_margin="@dimen/layout_dimen_12dp"
                android:textColor="@color/colorPrimary"


                android:backgroundTint="@color/backgroundTint"

                android:drawableLeft="@drawable/ic_email"

                android:drawablePadding="@dimen/layout_dimen_15dp"

                android:hint="@string/hint_email"

                android:inputType="textEmailAddress"

                android:padding="@dimen/layout_dimen_15dp"

                android:paddingStart="@dimen/layout_dimen_5dp"

                android:textColorHint="@color/colorPrimary"

                android:textSize="@dimen/textSize_13"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/password_login"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_margin="@dimen/layout_dimen_12dp"
                android:textAlignment="center"

                android:backgroundTint="@color/backgroundTint"

                android:drawableLeft="@drawable/ic_pass"

                android:drawablePadding="@dimen/layout_dimen_15dp"

                android:hint="@string/hint_password"

                android:inputType="textPassword"

                android:padding="@dimen/layout_dimen_15dp"

                android:paddingStart="@dimen/layout_dimen_5dp"

                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"

                android:textSize="@dimen/textSize_13"


                />


            <TextView

                android:id="@+id/forget_password"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:layout_marginTop="@dimen/layout_dimen_20dp"

                android:text="@string/Forget_Password"

                android:textColor="@color/colorPrimary"

                android:textStyle="bold"


                />


        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:orientation="vertical"

            >


            <Button

                android:id="@+id/but_sing"

                android:layout_width="wrap_content"

                android:layout_height="@dimen/layout_dimen_40dp"

                android:layout_centerHorizontal="true"

                android:layout_marginTop="@dimen/layout_dimen_40dp"

                android:background="@drawable/button"

                android:fontFamily="sans-serif-medium"

                android:gravity="center"

                android:paddingLeft="@dimen/layout_dimen_60dp"

                android:paddingRight="@dimen/layout_dimen_60dp"

                android:text="@string/sign_in"

                android:textAllCaps="false"

                android:textColor="@color/color_white"

                android:textSize="@dimen/textsize_16sp"

                />

        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginTop="@dimen/layout_dimen_15dp"

            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/Dont_have_an_account"

                android:textColor="@color/colorPrimary"

                android:textSize="@dimen/layout_dimen_12dp"

                />

            <TextView
                android:layout_marginLeft="@dimen/margin_5"

                android:id="@+id/regester_here"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:fontFamily="sans-serif-black"

                android:text="@string/Register_here"

                android:textColor="@color/colorPrimary"

                android:textSize="@dimen/layout_dimen_12dp"

                />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>